[package]
name = "cosmic-edit"
version = "0.1.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.71"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
dirs = "5"
env_logger = "0.10.0"
grep = "0.3.1"
ignore = "0.4.21"
lexical-sort = "0.3.1"
log = "0.4.20"
notify = "6.1.1"
open = "5.0.2"
patch = "0.7.0"
regex = "1.10"
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["process", "time"] }
# Extra syntax highlighting
syntect = "5.1.0"
two-face = "0.3.0"
# Internationalization
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7"
rust-embed = "8"

[dependencies.cosmic-files]
git = "https://github.com/pop-os/cosmic-files.git"
default-features = false

[dependencies.cosmic-syntax-theme]
git = "https://github.com/pop-os/cosmic-syntax-theme.git"

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text.git"
features = ["syntect", "vi"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["multi-window", "tokio", "winit"]

[dependencies.smol_str]
version = "0.2.1"
features = ["serde"]

[target.'cfg(unix)'.dependencies]
fork = "0.1"

[features]
default = ["wgpu"]
wgpu = ["libcosmic/wgpu", "cosmic-files/wgpu"]

[profile.release-with-debug]
inherits = "release"
debug = true
